# huella

./: .gitignore  clear-storage.c  compile.sh  compose.yml  consts.h  cpp-test.cpp  dockerfile  enroll.c  enroll.h  enrolled.pgm  entrypoint.sh  identify.c  identify.h  img-capture.c  manage-prints.c  meson.build  requirements.sh  storage.c  storage.h  utilities.c  utilities.h  verify.c  verify.h  verify.pgm
.cache/clangd/index/: clear-storage.c.6C47449D65732371.idx  cpp-test.cpp.2558CEA9A34213EA.idx  enroll.c.2945B8B8DC825111.idx  identify.c.2DF0B9FF8DACFEA0.idx  img-capture.c.F3123CEBF47E256D.idx  manage-prints.c.E779D1D913206851.idx  storage.c.AC4C4D88F42BFC2B.idx  storage.h.04244F334F5D9D11.idx  utilities.c.EBDE7F019DEB548D.idx  utilities.h.8D604C8537408AAA.idx  verify.c.98245790A41DA333.idx
c_package/: compose.yml  dockerfile  fingerprint.c  fingerprint.h  identify.c  identify.h  meson.build  storage.c  storage.h  utilities.c  utilities.h  verify.h
c_package/.cache/clangd/index/: consts.h.C5901B20C0BDE429.idx  enroll.c.3CEBA689A766075D.idx  enroll.h.77CFEC4C58E00682.idx  fingerprint.c.AB988BC996F1EE7F.idx  fingerprint.h.04582B055985A20B.idx  identify.c.4CDAD8C7F77A051C.idx  identify.cpp.22F54F9D254FDC49.idx  storage.c.02B398A3354F43FA.idx  storage.h.43B51BCE1F794F55.idx  utilities.c.2C2F7529FE50B51C.idx  utilities.h.73266F0239BB347D.idx  verify.c.F74C51514E478962.idx  verify.h.B83361B7F94F75A0.idx
py_package/: compose.yml  main.py
py_package/fingerprint/: __init__.py
test_py/: main.py
